tests/ui/half-open-range-patterns/range_pat_interactions2.stderr
error: expected `)`, found `+`
  --> $DIR/range_pat_interactions2.rs:10:19
   |
LL |             0..=(5+1) => errors_only.push(x),
   |                   ^ expected `)`

error: aborting due to 1 previous error

